fixed: there is white space at the end of slider

--- a/src/jquery.slider.css
+++ b/src/jquery.slider.css
@@ -21,7 +21,6 @@
 }
 .glm-item {
   display: inline-block;
-  width: 25%;
   border: 0;
 }
 .glm-item img {
